tests/error/sleeping_on_ident_after_struct_has_been_defined.c
// fail "(8,1): Error at 'foo': [0] Undeclared identifier."

struct foo
{
    int a, b, c;
};

foo;

